Change App name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </receiver>
         <receiver android:name=".OrderedReceiver3"
                 android:exported="true">
+<!--            Higher priority value means it will be executed before other receivers with lower priority.-->
             <intent-filter android:priority="3">
                 <action android:name="com.realityexpander.EXAMPLE_ACTION" />
             </intent-filter>
