--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                     android:value="" />
         </activity>
 
+        <!-- Statically Registered Broadcast Receivers-->
         <receiver android:name=".OrderedReceiver2"
                 android:exported="true">
             <intent-filter android:priority="2">
@@ -34,7 +35,7 @@
         </receiver>
         <receiver android:name=".OrderedReceiver3"
                 android:exported="true">
-<!--            Higher priority value means it will be executed before other receivers with lower priority.-->
+        <!-- Higher priority value means it will be executed before other receivers with lower priority.-->
             <intent-filter android:priority="3">
                 <action android:name="com.realityexpander.EXAMPLE_ACTION" />
             </intent-filter>
